# CivicMesh

./: .gitignore  AGENTS.md  CLAUDE.md  NOTICE  README.md  admin.py  civicmesh.py  clock.py  config.py  config.toml  config.toml.example  configure.py  database.py  dm_bot.py  external_display.py  fix-list.md  hub_docs.py  logger.py  mesh_bot.py  outbox_echoes.py  power_monitor.py  process_lock.py  promote.py  pyproject.toml  recovery.py  telemetry.py  web_server.py
apply/: __init__.py  driver.py  renderers.py  restart.py  validate.py
content/hub-docs/: README.md  manifest.toml
diagnostics/: loadgen.py
diagnostics/mesh-sim/: README.md  inject.py
diagnostics/mesh-sim/scenarios/: phantom-jam.json  silent-drift.json
diagnostics/radio/: FINDINGS.md  README.md  analyze_recovery_run.sh  contacts_purge.py  device_info.py  dm_diagnose.py  dm_rx_trace.py  drain_queue.py  manual_decrypt.py  minimum_contact_probe.py  nodes.toml  nodes.toml.example  recovery_characterization.py  run_test.py  t9_liveness_latency.py
diagnostics/radio/harness/: connection.py  logger.py  node_side.py  preflight.py  verdict.py
diagnostics/radio/tests/: t0_passive_listen.py  t1_unidirectional.py  t2_unidirectional_reverse.py  t3_repetition.py  t4_self_echo_characterization.py
docs/: captive-portal-precedent.md  captive_portal_setup.md  civicmesh-tool.md  clock_consensus.md  deploy.md  external-display-api.md  heard_count_design.md  heltec-recovery.md  hub-reference-library.md  inkplate-design-iteration.md  inkplate-research.md  invariants.md  ios-captive-portal-notes.md  meshcore-protocol-reference.md  message_lifecycle.md  open_questions.md  power-budget.md  recovery.md  spec.md  spec_skeleton.md  staged_plan.md  telemetry.md  victron-ble-setup.md
docs/radio-debugging/: README.md  boot-and-reset.md  failure-modes.md  our-hang.md  test-plan.md
inkplate/: .gitignore  README.md
inkplate/firmware/: Makefile
inkplate/firmware/bulletin/: bulletin.ino  bulletin_envelope.cpp  bulletin_envelope.h  bulletin_net.cpp  bulletin_net.h  smoke_fixture.h
inkplate/firmware/fortunes/: fortunes.ino  fortunes_data.h
inkplate/firmware/hello/: hello.ino
inkplate/firmware/scripts/: check-port.sh
inkplate/firmware/tools/: build_fortunes.py
inkplate/fixtures/api_mismatch__v3_server/: in.json
inkplate/fixtures/critical_battery/: in.json
inkplate/fixtures/failure_ap_unreachable__no_cache/: in.json
inkplate/fixtures/failure_ap_unreachable__with_cache/: in.json
inkplate/fixtures/failure_bad_json/: in.json
inkplate/fixtures/failure_dns_failure/: in.json
inkplate/fixtures/failure_http_error/: in.json
inkplate/fixtures/failure_pi_unreachable/: in.json
inkplate/fixtures/low_battery__bulletin/: in.json
inkplate/fixtures/normal_bulletin__channel_cycle_position_indicator/: in.json
inkplate/fixtures/normal_bulletin__empty_channel/: in.json
inkplate/fixtures/normal_bulletin__five_messages/: in.json
inkplate/fixtures/normal_bulletin__long_body_truncated/: in.json
inkplate/fixtures/normal_bulletin__pinned_first/: in.json
inkplate/fixtures/normal_bulletin__wifi_strength/: in.json
inkplate/fixtures/stale__radio_down/: in.json
inkplate/host/: Makefile  main.cpp  png_writer.cpp  png_writer.h
inkplate/render/: NOTES.md  library.properties
inkplate/render/src/: envelope.cpp  envelope.h  layout.h  payload.cpp  payload.h  relative_time.cpp  relative_time.h  render.cpp  render.h  stats.cpp  stats.h  status.cpp  status.h  text_wrap.cpp  text_wrap.h
inkplate/render/src/fonts/: LessPerfectDOSVGA.h  LessPerfectDOSVGA24.h
inkplate/render/src/screens/: api_mismatch.cpp  bulletin.cpp  critical_battery.cpp  failure_shell.cpp  screens.h
inkplate/tools/: contact-sheet.py  fixture-to-smoke-header.sh  regen_fixtures.sh  regen_font.py  regen_font.sh  render-live.sh
scripts/: ble_smoke.py  build_hub_docs.py  civicmesh-bootstrap.sh  networking_smoketest.md  setup_ap.sh
static/: app.js  identity.js  index.html  style.css
tests/: test_active_outbox_index.py  test_admin_messages_recent.py  test_admin_outbox_cancel.py  test_admin_outbox_clear.py  test_admin_outbox_list.py  test_admin_sessions_list.py  test_admin_sessions_show.py  test_api_identity.py  test_apply_ordering.py  test_build_hub_docs.py  test_civicmesh_migrations.py  test_civicmesh_smoke.py  test_clock.py  test_config.py  test_configure.py  test_contact_cli.py  test_contacts_api.py  test_contacts_db.py  test_db_lock_retry.py  test_dm_bot.py  test_dm_handler.py  test_egress_bucket.py  test_eviction.py  test_external_display_api.py  test_external_display_normalize.py  test_feedback.py  test_find_dev_project_root.py  test_hub_docs.py  test_mesh_bot_announce.py  test_mesh_bot_event_tap.py  test_mesh_sim_inject.py  test_power_monitor.py  test_promote.py  test_pyproject.py  test_radio_stats.py  test_recovery.py  test_test_state_api.py  test_web_messages_api.py  test_web_parsing_hardening.py  test_web_post_429.py  (+3 more)
tests/apply/: regenerate_goldens.py  test_driver.py  test_renderers.py  test_restart.py  test_validate.py
tests/apply/goldens/: minimal-config.toml
tests/apply/goldens/minimal/: 20-wlan0-ap.network  99-unmanaged-wlan0.conf  civicmesh-mesh.service  civicmesh-web.service  dnsmasq.conf  hostapd.conf  hostapd.default  nftables.conf  sysctl.conf
