[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "civicmesh"
version = "0.1.1"
description = "Civic Mesh Hub Relay Bot: WiFi captive-portal relay for MeshCore channels"
readme = "README.md"
# Both deployment targets (Pi 4 dev, Pi Zero 2W prod) run Python 3.13.5.
# No reason to advertise broader support.
requires-python = ">=3.13"
dependencies = [
  # meshcore is strictly pinned, not ranged. Rationale:
  #   - CivicMesh is a deployed app, not a library; nothing downstream
  #     benefits from version flexibility.
  #   - Nodes include zero2w which has no internet; upgrades are manual
  #     (apt-offline-style). A range would let two nodes drift to
  #     different versions silently — we literally saw this happen:
  #     pi4 on 2.2.5 vs zero2w on 2.3.6, where 2.2.5 returned
  #     ERROR(no_event_received) from send_chan_msg under sustained-send
  #     pressure even though the packet transmitted and was decoded on
  #     the other side. Pinning forces an explicit, intentional upgrade.
  #   - meshcore_py's minor versions have changed behavior non-trivially
  #     (e.g. 2.2→2.3 changed event payloads and added pycryptodome).
  # To bump: update this pin, re-run `python3 diagnostics/radio/run_test.py t3`,
  # confirm 40/40 BOTH_AGREE_SENT, then commit.
  "meshcore==2.3.6",
  "tomli-w>=1.2.0",
  "tomli; python_version < '3.11'",
]

[project.optional-dependencies]
diagnostics = ["psutil", "pyusb"]

[project.scripts]
civicmesh-web = "web_server:run"
civicmesh-mesh = "mesh_bot:main"
civicmesh = "civicmesh:main"

[tool.setuptools]
# Every top-level module the installed app imports must be listed here.
# setuptools ships ONLY these in the built wheel — `git archive` (promote)
# also drops the raw .py in the app dir, but civicmesh-web runs from the
# uv-installed package, so an unlisted module ImportErrors at runtime, not
# build time. external_display was missing and only failed when the
# external-display endpoint was first hit on prod. Lazily-imported modules
# (e.g. external_display, imported inside the handler) are the easy ones to
# forget — keep this list == root-level *.py the app imports.
py-modules = ["civicmesh", "clock", "config", "configure", "database", "dm_bot", "external_display", "hub_docs", "logger", "mesh_bot", "outbox_echoes", "process_lock", "promote", "recovery", "telemetry", "web_server"]
packages = ["apply"]

